web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-binding-inside-arrow-params-inside-async-arrow-params/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,15)
1|async (a = ({ await }) => {}) => {};
 |             ^
